# legal-ai

./: .env.example  .gitignore  DOCS.md  PLAN.md  PRD.md  README.md  TASK.md  current-app.md  pyproject.toml
app/: agent.py  chat_agent.py  config.py  main.py  orchestrator.py  prompts.py  schemas.py  web.py
app/adapters/: berlin_service.py  bundesportal.py  dguv.py  elster.py  generic_service.py  geoportal.py  handelsregister.py  nrw_regions.py  nrw_service.py  regions.py  sdg_client.py  sozialversicherung.py
app/cache/: sqlite.py
app/pipelines/: normalize.py  rules.py
app/store/: cases.py  progress.py  sessions.py
data/: cases.db
templates/: index.html
tests/: run_scenarios.py  test_adapters.py  test_e2e.py  test_rules.py  test_sdg.py  test_web.py
tests/fixtures/: case_berlin_alcohol_new_premises.json  case_berlin_no_alcohol.json  case_nrw_takeaway.json  scenario_01_berlin_minimal.json  scenario_02_berlin_full.json  scenario_03_nrw_minimal.json  scenario_04_nrw_full.json  scenario_05_nrw_middle.json
